2048/k8s/Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: game-2048
  labels:
    name: game-2048
